--- a/i18n/translation.csv
+++ b/i18n/translation.csv
@@ -15,3 +15,5 @@ settings_volume_sound,Sound Volume,Sound Lautstärke
 settings_language,Game Language,Spielsprache
 game_paused,Game paused,Spiel pausiert
 resume_game,Resume game,Weiterspielen
+try_again,Try again,Nochmal versuchen
+game_over,Game over,Spiel vorbei
